# ctype-to-json

./: .gitignore  CMakeLists.txt  Dependencies.cmake  LICENSE  README.md  config.toml  generate_prober.py  insert_platform_data.py  parse_headers.py  produce_json.py
XMLGenerator/: cast.sh
cmake/: PreventInSourceBuilds.cmake  StaticAnalyzers.cmake
include/: ctypes.hpp  string_to_scalar.hpp
parse_headers/: README.md  generate_prober.py  insert_platform_data.py  parse_headers.py  produce_json.py
src/: CMakeLists.txt  ctypes.cpp  scalar_table.cpp  string_to_scalar.cpp
test/: CMakeLists.txt  test_scalar_parser.cpp  test_string_validator.cpp
test_headers/: included.h  test_header.h  test_header2.h  test_header_bad.h  window_cfg.h
